# structlog-to-seq

./: .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  LICENSE  README.rst  docker-compose.yml  pyproject.toml  structlog_example.py  tox.ini
.github/workflows/: toxaction.yml
seq_test_server/: docker-compose.yml
src/structlog_to_seq/: __init__.py  celf_processor.py  celf_renderer.py  message_template_renderer.py
structlog_to_seq/: __init__.py  abs_formatter.py  abs_processor.py  celf_processor.py
test/: conftest.py  mock_timestamper.py  test_celf_processor_translate_keys.py  test_celf_renderer.py  test_configured_console_log.py  test_configured_stuctlog.py  test_exported_modules.py  test_message_template_renderer.py  test_mock_timestamper.py  test_reserved_key_replace.py
test/seq_test_server/: docker-compose.yml
tests/: structlog_test.py  test_abs_processor.py  test_reserved_key_replace.py  test_structlog_seq_processor.py
