[tool.poetry]
name = "structlog_to_seq"
version = "0.1.0"
description = "A collection of structlog processors for using structlog with Seq log server"
authors = ["Gergő Jedlicska <gergo@jedlicska.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "~5"
tox = "^3.14.3"
structlog = "^19.2.0"
coverage = {extras = ["toml"], version = "^5.0.3"}

[tool.coverage.run]
parallel = true
branch = true
source = ["structlog_to_seq"]

[tool.coverage.paths]
source = ["structlog_to_seq", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
