[tool.poetry]
name = "structlog_to_seq"
version = "0.2.2"
description = "A collection of structlog processors for using structlog with Seq log server"
authors = ["Gergő Jedlicska <gergo@jedlicska.com>"]
license = "MIT"
packages = [
  { include = "structlog_to_seq", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.6"
structlog = { version = "~20.1", optional = true}
colorama = { version = "^0.4.3", optional = true}
colorful = { version = "^0.5.4", optional = true}

[tool.poetry.dev-dependencies]
pytest = "~5"
tox = "^3.14.3"
coverage = {extras = ["toml"], version = "^5.0.3"}
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
pre-commit = "^1.21.0"
tox-gh-actions = "^0.3.0"
mypy = "^0.761"
rope = "^0.16.0"

pytest-cov = "^2.8.1"
importlib_metadata = { version = "^1.5.2", python = "<3.8"}


[tool.poetry.extras]
console = ["structlog", "colorama", "colorful"]


[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
lines_after_imports=2
lines_between_types=1
known_third_party=["colorful", "pytest", "structlog", "structlog_to_seq"]


[tool.coverage.run]
parallel = true
branch = true
source = ["structlog_to_seq"]


[tool.coverage.paths]
source = ["structlog_to_seq", ".tox/*/site-packages"]


[tool.coverage.report]
show_missing = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
